--- a/src/components/ImageGalleryItem/ImageGalleryItem.module.css
+++ b/src/components/ImageGalleryItem/ImageGalleryItem.module.css
@@ -1,4 +1,4 @@
-.ItemImageGallery {
+/* .ItemImageGallery {
   border-radius: 2px;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
@@ -14,4 +14,4 @@
     transform: scale(1.05);
     cursor: pointer;
   }
-}
+} */
