--- a/src/index.css
+++ b/src/index.css
@@ -6,12 +6,12 @@
   --accent-text-color: #341b49;
 
   --main-bg-color: #f0f0f0;
-  --second-bg-color: #843c8d;
-  --accent-bg-color: #472364;
+  --second-bg-color: #769f5f;
+  --accent-bg-color: #3f8d12;
   --backdrop-bg-color: rgba(43, 43, 43, 0.6);
 
   --hover-animation: 300ms cubic-bezier(0.17, 0.67, 0.83, 0.67);
-  --linear-gradient: linear-gradient(to bottom, #843c8d, #43235d);
+  --linear-gradient: linear-gradient(to bottom, #445eac, #610740);
   --box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.75);
 }
 
